# parallel-mcmc

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: run_gibbs_eight_schools.py  run_hmc_rosenbrock.py  run_mala_german_credit.py  run_mala_mog.py  run_mala_sentiment.py
src/: deer.py  elk.py  qdeer.py  qdeer_leapfrog.py  samplers.py  windowed_qdeer.py
